Fixed the backface-visibility in form buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,17 +29,17 @@
 }
 
 .btn-custom {
-  background:linear-gradient(to left,rgba(126, 213, 111, .2),rgba(40, 180, 133, .2));
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s; 
-  border-radius: 4px;
-  color: #fff;
+	background:linear-gradient(to left,rgba(126, 213, 111, .5),rgba(40, 180, 133, .5));
+	/*-webkit-transform: perspective(1px) translateZ(0);*/
+	/*transform: perspective(1px) translateZ(0);*/
+	box-shadow: -1 0 1px rgba(0, 0, 0, 0);
+	position: relative;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s; 
+	border-radius: 4px;
+	color: #fff;
 }
 
 .btn-custom:before {
@@ -62,7 +62,6 @@
 	-webkit-transition-timing-function: ease-out;
 	transition-timing-function: ease-out; 
 	border-radius: 4px;
-	/*color: #000;*/
 }
 
 .btn-custom:hover, .btn-custom:hover:before, .btn-custom:focus:before, .btn-custom:active:before {
@@ -243,7 +242,9 @@
 	cursor: pointer;
 }
 .form-link:hover {
-	text-shadow: 0 6px 8px rgba(255,255,255, 0.5), 0 6px 8px rgba(255,255,255, 0.5)
+	text-shadow: 0 6px 8px rgba(255,255,255, 0.5), 0 6px 8px rgba(255,255,255, 0.5);
+	transform:scale(1.1);
+
 }
 /*
 .form .form-side--front{
